--- a/Lab2_MLPractice.ipynb
+++ b/Lab2_MLPractice.ipynb
@@ -54,7 +54,7 @@
         "# set randomseed\n",
         "rng = np.random.default_rng(seed=42)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -71,18 +71,80 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8LpqjN991GGJ"
+        "id": "8LpqjN991GGJ",
+        "outputId": "72446137-0139-446b-9443-ac5af4975cbb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         " dataset =  datasets.fetch_california_housing()\n",
-        " # print(dataset.DESCR)  # uncomment this if you want to know more about this dataset\n",
-        " # print(dataset.keys())  # if you want to know what else is there in this dataset\n",
+        " print(dataset.DESCR)  # uncomment this if you want to know more about this dataset\n",
+        " print(dataset.keys())  # if you want to know what else is there in this dataset\n",
         " dataset.target = dataset.target.astype(np.int) # so that we can classify\n",
         " print(dataset.data.shape)\n",
         " print(dataset.target.shape)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Downloading Cal. housing from https://ndownloader.figshare.com/files/5976036 to /root/scikit_learn_data\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            ".. _california_housing_dataset:\n",
+            "\n",
+            "California Housing dataset\n",
+            "--------------------------\n",
+            "\n",
+            "**Data Set Characteristics:**\n",
+            "\n",
+            "    :Number of Instances: 20640\n",
+            "\n",
+            "    :Number of Attributes: 8 numeric, predictive attributes and the target\n",
+            "\n",
+            "    :Attribute Information:\n",
+            "        - MedInc        median income in block\n",
+            "        - HouseAge      median house age in block\n",
+            "        - AveRooms      average number of rooms\n",
+            "        - AveBedrms     average number of bedrooms\n",
+            "        - Population    block population\n",
+            "        - AveOccup      average house occupancy\n",
+            "        - Latitude      house block latitude\n",
+            "        - Longitude     house block longitude\n",
+            "\n",
+            "    :Missing Attribute Values: None\n",
+            "\n",
+            "This dataset was obtained from the StatLib repository.\n",
+            "http://lib.stat.cmu.edu/datasets/\n",
+            "\n",
+            "The target variable is the median house value for California districts.\n",
+            "\n",
+            "This dataset was derived from the 1990 U.S. census, using one row per census\n",
+            "block group. A block group is the smallest geographical unit for which the U.S.\n",
+            "Census Bureau publishes sample data (a block group typically has a population\n",
+            "of 600 to 3,000 people).\n",
+            "\n",
+            "It can be downloaded/loaded using the\n",
+            ":func:`sklearn.datasets.fetch_california_housing` function.\n",
+            "\n",
+            ".. topic:: References\n",
+            "\n",
+            "    - Pace, R. Kelley and Ronald Barry, Sparse Spatial Autoregressions,\n",
+            "      Statistics and Probability Letters, 33 (1997) 291-297\n",
+            "\n",
+            "dict_keys(['data', 'target', 'feature_names', 'DESCR'])\n",
+            "(20640, 8)\n",
+            "(20640,)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -112,7 +174,7 @@
         "  predlabel = np.array([NN1(traindata, trainlabel, i) for i in testdata])\n",
         "  return predlabel\n"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -138,7 +200,7 @@
         "  predlabel = classes[rints]\n",
         "  return predlabel"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -161,7 +223,7 @@
         "  correct = (gtlabel==predlabel).sum() # count the number of times the groundtruth label is equal to the predicted label.\n",
         "  return correct/len(gtlabel)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -190,7 +252,7 @@
         "  split2label = label[split2]\n",
         "  return split1data, split1label, split2data, split2label"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -205,7 +267,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bBZkHBLJ1iU-"
+        "id": "bBZkHBLJ1iU-",
+        "outputId": "7afac0df-7844-4b78-edb6-814995896d81",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "testdata, testlabel, alltraindata, alltrainlabel = split(dataset.data, dataset.target, 20/100)\n",
@@ -213,8 +279,18 @@
         "print('Number of other samples = ', len(alltrainlabel))\n",
         "print('Percent of test data = ', len(testlabel)*100/len(dataset.target),'%')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of test samples =  4144\n",
+            "Number of other samples =  16496\n",
+            "Percent of test data =  20.07751937984496 %\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -235,7 +311,7 @@
       "source": [
         "traindata, trainlabel, valdata, vallabel = split(alltraindata, alltrainlabel, 75/100)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -250,7 +326,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DBlZDTHUFTZx"
+        "id": "DBlZDTHUFTZx",
+        "outputId": "c9faf6ac-7128-4533-dfa3-f64eb99dbc2c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "trainpred = NN(traindata, trainlabel, traindata)\n",
@@ -261,8 +341,17 @@
         "trainAccuracy = Accuracy(trainlabel, trainpred)\n",
         "print(\"Train accuracy using random classifier is \", trainAccuracy)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Train accuracy using nearest neighbour is  1.0\n",
+            "Train accuracy using random classifier is  0.164375808538163\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -278,7 +367,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4h7bXoW_2H3v"
+        "id": "4h7bXoW_2H3v",
+        "outputId": "d8daed63-6bf3-49fa-80e2-1c439dc6cf1b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "valpred = NN(traindata, trainlabel, valdata)\n",
@@ -289,8 +382,17 @@
         "valAccuracy = Accuracy(vallabel, valpred)\n",
         "print(\"Validation accuracy using random classifier is \", valAccuracy)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Validation accuracy using nearest neighbour is  0.3365205843293493\n",
+            "Validation accuracy using random classifier is  0.16812749003984065\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -306,16 +408,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ujm3cyYzEntE"
+        "id": "ujm3cyYzEntE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fd762cf4-db9c-4246-a0df-322ac28b8430"
       },
       "source": [
-        "traindata, trainlabel, valdata, vallabel = split(alltraindata, alltrainlabel, 75/100)\n",
+        "traindata, trainlabel, valdata, vallabel = split(alltraindata, alltrainlabel, 35/100)\n",
         "valpred = NN(traindata, trainlabel, valdata)\n",
         "valAccuracy = Accuracy(vallabel, valpred)\n",
         "print(\"Validation accuracy of nearest neighbour is \", valAccuracy)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Validation accuracy of nearest neighbour is  0.314361350099272\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -332,15 +446,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PNEZ5ToYBEDW"
+        "id": "PNEZ5ToYBEDW",
+        "outputId": "fe850fd2-6cf0-4ed7-d164-2daf048657a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "testpred = NN(alltraindata, alltrainlabel, testdata)\n",
         "testAccuracy = Accuracy(testlabel, testpred)\n",
         "print('Test accuracy is ', testAccuracy)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Test accuracy is  0.34917953667953666\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -354,6 +480,21 @@
         "3. What do you think is a good percentage to reserve for the validation set so that thest two factors are balanced? \n",
         "\n",
         "Answer for both nearest neighbour and random classifier. You can note down the values for your experiments and plot a graph using  <a href=https://matplotlib.org/stable/gallery/lines_bars_and_markers/step_demo.html#sphx-glr-gallery-lines-bars-and-markers-step-demo-py>plt.plot<href>. Check also for extreme values for splits, like 99.9% or 0.1%"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AoUHXlKkIdUP"
+      },
+      "source": [
+        "Answers to the Questions --\n",
+        "\n",
+        "Answer 1 - The answer to this is we decrease the test set percentage as we increase the validation test percentage and thus the accuracy will go down as the number of examples to learn from will be less and this will be the reason in the reduction of accuracy.\n",
+        "\n",
+        "Answer 2 - We can't particularly answer this question because if we give low size in the validation set, then the accuracy we get will also be something very low and we can't just believe that, so we have to try out different percentages and after that also we can not come to a conclusion that what percentage is fit, because the accuracy changes for even same set. So, its really hard to get them equal.\n",
+        "\n",
+        "Answer 3 - After trying many possible spilts of the validation set and test sets, something around 35 and 65, 70 and 30 may work, but then again we can not be definite with these results.\n"
       ]
     },
     {
@@ -382,21 +523,60 @@
         "    accuracy += Accuracy(vallabel, valpred)\n",
         "  return accuracy/iterations # average of all accuracies"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "H3qtNar7Bbik"
+        "id": "H3qtNar7Bbik",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4f531ee9-0e42-4693-bde1-c045a6dadc59"
       },
       "source": [
-        "print('Average validation accuracy is ', AverageAccuracy(alltraindata, alltrainlabel, 75/100, 10, classifier=NN))\n",
+        "print('Average validation accuracy is ', AverageAccuracy(alltraindata, alltrainlabel, 85/100, 20, classifier=NN))\n",
+        "testpred = NN(alltraindata, alltrainlabel, testdata)\n",
+        "print('test accuracy is ',Accuracy(testlabel, testpred) )"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Average validation accuracy is  0.34168186302520803\n",
+            "test accuracy is  0.34917953667953666\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EPNr_a0eA2Qh",
+        "outputId": "4cfe19e8-5477-42d5-f60f-6b345fcd844b"
+      },
+      "source": [
+        "print('Average validation accuracy is ', AverageAccuracy(alltraindata, alltrainlabel, 85/100, 20, classifier=NN))\n",
         "testpred = NN(alltraindata, alltrainlabel, testdata)\n",
         "print('test accuracy is ',Accuracy(testlabel, testpred) )"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Average validation accuracy is  0.3402415440879115\n",
+            "test accuracy is  0.34917953667953666\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -414,15 +594,18 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "1WileBUqC404"
+        "id": "waZ6g8fo_ViF"
       },
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+        "Answer 1 - Definitely yes, the reason is that at the end we are taking mean of all the validation accuracies which came through, so its going to be more consisitent.\n",
+        "\n",
+        "\n",
+        "Answer 2 - It can be checked by changing the number of test cases, so yes it gives more accurate results.\n",
+        "\n",
+        "Answer 3 & 4 - Yes, it will help us in getting a better estimate but it only helps if we increase the validation test cases but if the number of validation test cases is low and we increase the iterations, it wont be helpful to us."
+      ]
     }
   ]
 }
